# PrediceModelAPI

./: columns.pkl  main.py  model.pkl  pyproject.toml  requirements.txt  scaler.pkl
