[tool.poetry]
name = "predicemodelapi"
version = "0.1.0"
description = "Crop Yield Prediction API"
authors = [Dylan]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.0"
uvicorn = { extras = ["standard"], version = "^0.23.0" }
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
joblib = "^1.3.2"
pydantic = "^2.6.0"

[tool.poetry.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port $PORT"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
